--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: "2.1"
-volumes:
-  grafana:
-  postgres:
 services:
   # Grafana Alloy batches and processes traces sent to it, generating
   # auto-logs from those traces.
   # Includes Metrics, Logs, Traces and Profiles.
   alloy:
-    image: grafana/alloy:v1.1.0
+    image: grafana/alloy:latest
+    restart: unless-stopped
+    container_name: gf_alloy
+    hostname: gf_alloy
     ports:
       - "12347:12345"
       - "12348:12348"
@@ -22,275 +21,111 @@ services:
       "--stability.level=public-preview",
       "/etc/alloy/config.alloy",
     ]
+    networks:
+      - default
+      - proxy
 
   # The Grafana dashboarding server.
   grafana:
-    image: grafana/grafana:11.0.0
-    volumes:
-      - "./grafana/definitions:/var/lib/grafana/dashboards"
-      - "./grafana/provisioning:/etc/grafana/provisioning"
+    image: grafana/grafana-oss:latest
+    restart: unless-stopped
+    container_name: grafana
     ports:
       - "3000:3000"
     environment:
-      - GF_FEATURE_TOGGLES_ENABLE=flameGraph traceqlSearch traceQLStreaming correlations metricsSummary traceqlEditor traceToMetrics traceToProfiles datatrails
-      - GF_INSTALL_PLUGINS=https://storage.googleapis.com/integration-artifacts/grafana-lokiexplore-app/grafana-lokiexplore-app-latest.zip;grafana-lokiexplore-app
+      - GF_FEATURE_TOGGLES_ENABLE=correlations
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
-
-  # A RabbitMQ queue used to send message between the requester and the server microservices.
-  mythical-queue:
-    image: rabbitmq:management
-    restart: always
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck:
-      test: rabbitmq-diagnostics check_running
-      interval: 5s
-      timeout: 30s
-      retries: 10
-
-  # A postgres DB used to store data by the API server microservice.
-  mythical-database:
-    image: postgres:14.5
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: "mythical"
     volumes:
-      - "postgres:/var/lib/postgresql/data"
-    ports:
-      - "5432:5432"
+      - grafana_config:/etc/grafana
+      - grafana_data:/var/lib/grafana
+      - grafana_log:/var/log/grafana
+    networks:
+     - default
+     - proxy
 
-  # A microservice that makes requests to the API server microservice. Requests are also pushed onto the mythical-queue.
-  mythical-requester:
-    #build:
-    #  context: ./source
-    #  dockerfile: docker/Dockerfile
-    #  args:
-    #    SERVICE: mythical-beasts-requester
-    image: grafana/intro-to-mltp:mythical-beasts-requester-latest
-    restart: always
-    depends_on:
-      mythical-queue:
-        condition: service_healthy
-      mythical-server:
-        condition: service_started
+  # InfluxDB collects and stores time-series data to be used as a Grafana Source
+  influxdb:
+    image: influxdb:latest
+    restart: unless-stopped
+    container_name: gf_influxdb
+    hostname: gf_influxdb
     ports:
-      - "4001:4001"
-    environment:
-      - NAMESPACE=production
-      - LOGS_TARGET=http://alloy:3100/loki/api/v1/push
-      - TRACING_COLLECTOR_HOST=alloy
-      - TRACING_COLLECTOR_PORT=4317
-      - OTEL_EXPORTER_OTLP_TRACES_INSECURE=true
-      - OTEL_RESOURCE_ATTRIBUTES=ip=1.2.3.4
-
-  # The API server microservice.
-  # It writes logs directly to the Loki service, exposes metrics for the Prometheus
-  # service and sends traces to the Grafana Alloy instance.
-  mythical-server:
-    #build:
-    #  context: ./source
-    #  dockerfile: docker/Dockerfile
-    #  args:
-    #    SERVICE: mythical-beasts-server
-    image: grafana/intro-to-mltp:mythical-beasts-server-latest
-    restart: always
-    ports:
-      - "4000:4000"
-      - "80:80"
-    depends_on:
-      - mythical-database
-    environment:
-      - NAMESPACE=production
-      - LOGS_TARGET=http://alloy:3100/loki/api/v1/push
-      - TRACING_COLLECTOR_HOST=alloy
-      - TRACING_COLLECTOR_PORT=4317
-      - OTEL_EXPORTER_OTLP_TRACES_INSECURE=true
-      - OTEL_RESOURCE_ATTRIBUTES=ip=1.2.3.5
-
-  # A microservice that consumes requests from the mythical-queue
-  mythical-recorder:
-    #build:
-    #  context: ./source
-    #  dockerfile: docker/Dockerfile
-    #  args:
-    #    SERVICE: mythical-beasts-recorder
-    image: grafana/intro-to-mltp:mythical-beasts-recorder-latest
-    restart: always
-    depends_on:
-      mythical-queue:
-        condition: service_healthy
-    ports:
-      - "4002:4002"
-    environment:
-      - NAMESPACE=production
-      - LOGS_TARGET=http://alloy:3100/loki/api/v1/push
-      - TRACING_COLLECTOR_HOST=alloy
-      - TRACING_COLLECTOR_PORT=4317
-      - OTEL_EXPORTER_OTLP_TRACES_INSECURE=true
-      - OTEL_RESOURCE_ATTRIBUTES=ip=1.2.3.5
-
-  # The Tempo service stores traces send to it by Grafana Alloy, and takes
-  # queries from Grafana to visualise those traces.
-  tempo:
-    image: grafana/tempo:2.4.1
-    ports:
-      - "3200:3200"
-      - "4317:4317"
-      - "4318:4318"
-      - "9411:9411"
-      - "55680:55680"
-      - "55681:55681"
-      - "14250:14250"
-    command: [ "-config.file=/etc/tempo.yaml" ]
+      - "8086:8086"
     volumes:
-      - "./tempo/tempo.yaml:/etc/tempo.yaml"
+      - influxdb_data:/var/lib/influxdb2
+      - influxdb_config:/etc/influxdb2
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=admin
+      - DOCKER_INFLUXDB_INIT_PASSWORD=password1234
+      - DOCKER_INFLUXDB_INIT_ORG=Lab32
+      - DOCKER_INFLUXDB_INIT_BUCKET=lab32
+    networks:
+      - default
+      - proxy
 
   # The Loki service stores logs sent to it, and takes queries from Grafana
   # to visualise those logs.
   loki:
-    image: grafana/loki:3.0.0
+    image: grafana/loki:latest
+    restart: unless-stopped
     command: ["--pattern-ingester.enabled=true", "-config.file=/etc/loki/loki.yaml"]
     ports:
       - "3100:3100"
     volumes:
       - "./loki/loki.yaml:/etc/loki/loki.yaml"
+      - loki_data:/loki
 
-  mimir:
-    image: grafana/mimir:2.12.0
-    command: ["-ingester.native-histograms-ingestion-enabled=true", "-config.file=/etc/mimir.yaml"]
+  # Promtail collects logs from syslog and sends them to Loki
+  promtail:
+    image: grafana/promtail:latest
+    restart: unless-stopped
+    volumes:
+      - promtail_log:/var/log
+      - promtail_positions:/promtail_positions
+      - ./promtail/promtail.yaml:/etc/promtail/config.yml
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: -config.file=/etc/promtail/config.yml
+    depends_on:
+      - loki
+
+  syslogng:
+    image: linuxserver/syslog-ng:latest
+    restart: unless-stopped
     ports:
-      - "9009:9009"
+      - 514:5514/udp
+      - 601:6601
+    volumes:
+      - ./syslog-ng:/config:ro
+      - syslogng_logs:/var/log
+
+  # Mimir is a long-term storage for Metrics
+  mimir:
+    image: grafana/mimir:latest
+    restart: unless-stopped
+    command: ["-ingester.native-histograms-ingestion-enabled=true", "-config.file=/etc/mimir.yaml"]
     volumes:
       - "./mimir/mimir.yaml:/etc/mimir.yaml"
+      - mimir_data:/mimir
 
-  k6:
-    image: grafana/k6
-    volumes:
-      - "./k6:/scripts"
-    environment:
-      - K6_PROMETHEUS_RW_SERVER_URL=http://mimir:9009/api/v1/push
-      - K6_DURATION=3600s
-      - K6_VUS=4
-      - K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM=true
-    restart: always
-    command: ["run", "-o", "experimental-prometheus-rw", "/scripts/mythical-loadtest.js"]
+volumes:
+  grafana_config:
+  grafana_data:
+  grafana_log:
+  loki_data:
+  promtail_log:
+  promtail_positions:
+  mimir_data:
+  influxdb_data:
+  influxdb_config:
+  syslogng_logs:
 
-  pyroscope:
-    image: grafana/pyroscope:1.5.0
-    ports:
-      - "4040:4040"
-    command: ["server"]
-
-  beyla-requester:
-    image: grafana/beyla:1.5.3
-    # Beyla requires to be run in the same process namespace as the process it's watching.
-    # In Docker, we can do this by joining the namespace for the watched process with the Beyla
-    # container watching it by using a specific `pid` label.
-    pid: "service:mythical-requester"
-    # Beyla requires the SYS_ADMIN capability to run, to add hooks to the underlying kernel.
-    # Note that you should *always* be aware of the security implications of adding capabilities
-    # before you do so.
-    cap_add:
-      - SYS_ADMIN
-    # If using the above capability fails to instrument your service, remove it and uncomment the
-    # line below. Beware that this will allow Beyla to run with full privileges, which may be
-    # undesirable.
-    #privileged: true
-    command:
-      - /beyla
-      - --config=/configs/config.yaml
-    volumes:
-      - ./beyla/:/configs
-    # See the full list of configuration options at
-    # https://grafana.com/docs/grafana-cloud/monitor-applications/beyla/configure/options/ for more details on the
-    # options set below.
-    environment:
-      BEYLA_OPEN_PORT: "4001"                                   # Instrument any service listening on port 4001.
-      BEYLA_SERVICE_NAMESPACE: "mythical"                       # The namespace for the service.
-      BEYLA_PROMETHEUS_PORT: "9090"                             # The port to expose Prometheus metrics on.
-      #BEYLA_BPF_TRACK_REQUEST_HEADERS: "true"
-      OTEL_SERVICE_NAME: "beyla-mythical-requester"             # The service name to use for OpenTelemetry traces.
-      OTEL_EXPORTER_OTLP_TRACES_INSECURE: "true"                 # Whether to use an insecure connection to Grafana Alloy.
-      OTEL_EXPORTER_OTLP_PROTOCOL: "grpc"                       # The protocol to use to send traces to Grafana Alloy.
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://alloy:4317/"  # The endpoint to send traces to.
-    # The `depends_on` block below ensures that the mythical-requester service is started before Beyla.
-    depends_on:
-      mythical-requester:
-        condition: service_started
-
-  beyla-server:
-    image: grafana/beyla:1.5.3
-    # Beyla requires to be run in the same process namespace as the process it's watching.
-    # In Docker, we can do this by joining the namespace for the watched process with the Beyla
-    # container watching it by using a specific `pid` label.
-    pid: "service:mythical-server"
-    # Beyla requires the SYS_ADMIN capability to run, to add hooks to the underlying kernel.
-    # Note that you should *always* be aware of the security implications of adding capabilities
-    # before you do so.
-    cap_add:
-      - SYS_ADMIN
-    # If using the above capability fails to instrument your service, remove it and uncomment the
-    # line below. Beware that this will allow Beyla to run with full privileges, which may be
-    # undesirable.
-    #privileged: true
-    command:
-      - /beyla
-      - --config=/configs/config.yaml
-    volumes:
-      - ./beyla/:/configs
-    # See the full list of configuration options at
-    # https://grafana.com/docs/grafana-cloud/monitor-applications/beyla/configure/options/ for more details on the
-    # options set below.
-    environment:
-      BEYLA_OPEN_PORT: "4000"                                   # Instrument any service listening on port 4001.
-      BEYLA_SERVICE_NAMESPACE: "mythical"                       # The namespace for the service.
-      BEYLA_PROMETHEUS_PORT: "9090"                             # The port to expose Prometheus metrics on.
-      #BEYLA_BPF_TRACK_REQUEST_HEADERS: "true"
-      OTEL_SERVICE_NAME: "beyla-mythical-server"                # The service name to use for OpenTelemetry traces.
-      OTEL_EXPORTER_OTLP_TRACES_INSECURE: "true"                # Whether to use an insecure connection to Grafana Alloy.
-      OTEL_EXPORTER_OTLP_PROTOCOL: "grpc"                       # The protocol to use to send traces to Grafana Alloy.
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://alloy:4317/"  # The endpoint to send traces to.
-    # The `depends_on` block below ensures that the mythical-server service is started before Beyla.
-    depends_on:
-      mythical-server:
-        condition: service_started
-
-  beyla-recorder:
-    image: grafana/beyla:1.5.3
-    # Beyla requires to be run in the same process namespace as the process it's watching.
-    # In Docker, we can do this by joining the namespace for the watched process with the Beyla
-    # container watching it by using a specific `pid` label.
-    pid: "service:mythical-recorder"
-    # Beyla requires the SYS_ADMIN capability to run, to add hooks to the underlying kernel.
-    # Note that you should *always* be aware of the security implications of adding capabilities
-    # before you do so.
-    cap_add:
-      - SYS_ADMIN
-    # If using the above capability fails to instrument your service, remove it and uncomment the
-    # line below. Beware that this will allow Beyla to run with full privileges, which may be
-    # undesirable.
-    #privileged: true
-    command:
-      - /beyla
-      - --config=/configs/config.yaml
-    volumes:
-      - ./beyla/:/configs
-    # See the full list of configuration options at
-    # https://grafana.com/docs/grafana-cloud/monitor-applications/beyla/configure/options/ for more details on the
-    # options set below.
-    environment:
-      BEYLA_OPEN_PORT: "4002"                                   # Instrument any service listening on port 4001.
-      BEYLA_SERVICE_NAMESPACE: "mythical"                       # The namespace for the service.
-      BEYLA_PROMETHEUS_PORT: "9090"                             # The port to expose Prometheus metrics on.
-      #BEYLA_BPF_TRACK_REQUEST_HEADERS: "true"
-      OTEL_SERVICE_NAME: "beyla-mythical-recorder"              # The service name to use for OpenTelemetry traces.
-      OTEL_EXPORTER_OTLP_TRACES_INSECURE: "true"                # Whether to use an insecure connection to Grafana Alloy.
-      OTEL_EXPORTER_OTLP_PROTOCOL: "grpc"                       # The protocol to use to send traces to Grafana Alloy.
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://alloy:4317/"  # The endpoint to send traces to.
-    # The `depends_on` block below ensures that the mythical-recorder service is started before Beyla.
-    depends_on:
-      mythical-recorder:
-        condition: service_started
+networks:
+  default:
+    name: grafana_backend
+  proxy:
+    name: proxy
+    external: true
