add authentik OIDC

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 INFLUXDB_USER=username
 INFLUXDB_PASSWORD=password
+ROOT_URL=https://grafana.company/
+
+OAUTH_DOMAIN=authentik.company
+OAUTH_SLUG=grafana
+OAUTH_CLIENT_ID=id
+OAUTH_CLIENT_SECRET=secret
