--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,18 @@ services:
       - "3000:3000"
     environment:
       - GF_FEATURE_TOGGLES_ENABLE=correlations
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_SERVER_ROOT_URL=${ROOT_URL}
+      - GF_AUTH_GENERIC_OAUTH_ENABLED=true
+      - GF_AUTH_GENERIC_OAUTH_NAME=authentik
+      - GF_AUTH_GENERIC_OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID}
+      - GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
+      - GF_AUTH_GENERIC_OAUTH_SCOPES=openid profile email
+      - GF_AUTH_GENERIC_OAUTH_AUTH_URL=https://${OAUTH_DOMAIN}/application/o/authorize/
+      - GF_AUTH_GENERIC_OAUTH_TOKEN_URL=https://${OAUTH_DOMAIN}/application/o/token/
+      - GF_AUTH_GENERIC_OAUTH_API_URL=https://${OAUTH_DOMAIN}/application/o/userinfo/
+      - GF_AUTH_SIGNOUT_REDIRECT_URL=https://${OAUTH_DOMAIN}/application/o/${OAUTH_SLUG}/end-session/
+#      - GF_AUTH_OAUTH_AUTO_LOGIN=true
+      - GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH=contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'
     volumes:
       - grafana_config:/etc/grafana
       - grafana_data:/var/lib/grafana
@@ -71,7 +80,7 @@ services:
   loki:
     image: grafana/loki:latest
     restart: unless-stopped
-    command: ["--pattern-ingester.enabled=true", "-config.file=/etc/loki/loki.yaml"]
+    command: ["-config.file=/etc/loki/loki.yaml"]
     ports:
       - "3100:3100"
     volumes:
@@ -99,7 +108,7 @@ services:
       - 514:5514/udp
       - 601:6601
     volumes:
-      - ./syslog-ng:/config:ro
+      - ./syslog-ng:/config
       - syslogng_logs:/var/log
 
   # Mimir is a long-term storage for Metrics
