Fix syslog config syntax error

--- a/syslog-ng/syslog-ng.conf
+++ b/syslog-ng/syslog-ng.conf
@@ -29,7 +29,7 @@ destination d_local {
 };
 
 destination d_loki {
-  syslog("promtail" transport("tcp") port(4445))
+  syslog("promtail" transport("tcp") port(4445));
 };
 
 log {
